# sio-rs

./: .cirrus.yml  .travis.yml  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
benches/: writer.rs
src/: aead.rs  aesgcm.rs  c20p1305.rs  error.rs  lib.rs  ring.rs  utils.rs  writer.rs
tests/: closer_tests.rs  writer_tests.rs
