[package]
name = "sio"
version = "0.2.0"
authors = ["Andreas Auernhammer <aead@mail.de>"]
edition = "2018"

description = "Secure IO"
license = "MIT"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false

[features]
default = ["ring"]

# The 'debug_panic' feature prevents panicking when
# an 'EncWriter' or 'DecWriter' gets dropped without
# being closed explicitly - in debug mode. It has no
# effect in release mode. The purpose of this feature
# is to debug a panic caused by some other code. If 
# that panic occurs while an 'EncWriter' or 'DecWriter'
# has not been closed (yet) then the close call will be
# skipped but the writer may get dropped (unwinding) - 
# which then causes another panic. 
#
# This feature should only be enabled when debugging a
# panic.
debug_panic = []


[dependencies]
ring = { version = "0.14.6", optional = true }
