[package]
name = "sio"
version = "0.3.0"
authors = ["Andreas Auernhammer <aead@mail.de>"]
edition = "2021"

description = "Secure IO"
license = "MIT"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false

[features]
default = ["c20p1305"]

c20p1305 = ["ring"]
aesgcm = ["ring"]

[dependencies]
ring = { version = "0.16", optional = true }
